--- a/public/index.html
+++ b/public/index.html
@@ -248,7 +248,7 @@
             </div>
             <div class="col-md-4">
                 <div class="project add-animation-stopped animation-3">
-                    <img alt="..." src="assets/img/budget3.jpg"/>
+                    <img alt="..." src="assets/img/budget3.jpeg"/>
                     <a class="over-area color-4 " href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_2">
                         <div class="content">
                             <h4>Budget Example No.2</h4>
