--- a/public/index.html
+++ b/public/index.html
@@ -859,6 +859,85 @@
     </div>
   </div>
 </div>
+<div class="project-content" id="budgetQuestions">
+  <span class="icon-close"><i class="pe-7s-close-circle"></i></span>
+  <div>
+    <div class="project-details">
+      <div class="container">
+        <div class="project-title">
+            <h2>Budget Questions</h2>
+            <div class="separator-container">
+              <div class="separator line-separator">∎</div>
+            </div>
+        </div>
+
+          <div class="section section-we-are-1">
+
+                  <form method="post" action="mailto:raizen@mail.utexas.edu?subject=Vocabulary Quiz 1" enctype="text/plain">
+                      <!-- Check the answer to each multiple-coice question, and click on the "Send Form" button to submit the information. -->
+
+                      <P> 1. Where is the location of your project?
+                      <input type="text" class="form-control" id="Street Address" placeholder="Street Address">
+                      <input type="text" class="form-control" id="City" placeholder="City">
+                      <input type="text" class="form-control" id="State" placeholder="State">
+
+                      </p>
+
+                      <P> 2. What best describes this project?<BR>
+                      <input type="radio" name="2. What best describes this project?" value="Kitchen Remodel ">Kitchen Remodel <BR>
+                      <input type="radio" name="2. What best describes this project?" value="Home Remodel ">Home Remodel <BR>
+                      <input type="radio" name="2. What best describes this project?" value="Bathroom Remodel">Bathroom Remodel<BR>
+                      <input type="radio" name="2. What best describes this project?" value="Bedroom Remodel ">Bedroom Remodel <BR>
+                      <input type="radio" name="2. What best describes this project?" value="Laundry Room Remodel ">Laundry Room Remodel <BR>
+
+                      </p>
+
+                      <P> 3. What type of design has been completed?<BR>
+                      <input type="radio" name="3. What type of design has been completed?" value="Pictures">Pictures<BR>
+                      <input type="radio" name="3. What type of design has been completed?" value="Sketches">Sketches<BR>
+                      <input type="radio" name="3. What type of design has been completed?" value="Professional Drawings">Professional Drawings<BR>
+                      <input type="radio" name="3. What type of design has been completed?" value="None">None<BR>
+
+                      </p>
+
+                      <P> 4. Choose the status of this project:<BR>
+                      <input type="radio" name="4. Choose the status of this project:" value="Ready to Hire">Ready to Hire<BR>
+                      <input type="radio" name="4. Choose the status of this project:" value="Planning and Budgeting">Planning and Budgeting<BR>
+
+                      </p>
+
+                      <P> 5. What kind of location is this?<BR>
+                      <input type="radio" name="5. What kind of location is this?" value="Home">Home<BR>
+                      <input type="radio" name="5. What kind of location is this?" value="Business">Business<BR>
+
+                      </p>
+
+                      <P> 6. Are you the owner or authorized to make property changes?<BR>
+                      <input type="radio" name="6. Are you the owner or authorized to make property changes?" value="Yes">Yes<BR>
+                      <input type="radio" name="6. Are you the owner or authorized to make property changes?" value="No">No<BR>
+
+                      </p>
+
+                      <P> 7. Any project details you would like the pro to know?<BR>
+                      <input type="text" class="form-control" id="Project Details" placeholder="Project Details">
+
+                      </p>
+
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                      <input type="submit" value="Submit">
+                      <input type="reset" value="Clear Form">
+
+                  </form>
+          </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
   <!--   core js files    -->
   <script src="assets/js/jquery-1.11.2.min.js" type="text/javascript"></script>
